<resources>
    <string name="app_name">Composition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo">Welcome logo.</string>
    <string name="title">Состав числа</string>
    <string name="description">Правила игры: перед вами будет три фигуры, две снизу и одна сверху,
    в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу
    в верхней фигуре, для этого нужно вставить недостающее число. \n\nПример: в верхнем круге число
        7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака
        должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="agree">Понятно</string>
    <string name="choose_level">Выбрите уровень:</string>
    <string name="button_test_label">тестовый</string>
    <string name="button_easy_label">легий</string>
    <string name="button_normal_label">средний</string>
    <string name="button_hard_label">сложный</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game over</string>
    <string name="min_count_of_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="count_of_right_answers">Ваш счет: %s</string>
    <string name="min_percentage_of_right_answers">Необходимый процент правильных ответов: %s</string>
    <string name="percentage_of_right_answers">Процент правильных ответов: %s</string>
    <string name="button_retry_label">Попробовать снова</string>
</resources>