<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="com.myhome.android.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_margin="48dp"
            android:contentDescription="@string/game_over"
            app:emoji="@{gameResult.winner}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_baseline_mood_24" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredAnswer="@{gameResult.gameSettings.minCountOfRightAnswers}"
            tools:text="@string/min_count_of_right_answers"/>

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:count="@{gameResult.countOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
            app:layout_constraintEnd_toEndOf="@+id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
            tools:text="@string/count_of_right_answers"/>

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_score_percentage"
            app:layout_constraintEnd_toEndOf="@+id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
            app:requiredPercent="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            tools:text="@string/min_percentage_of_right_answers"/>

        <TextView
            android:id="@+id/tv_score_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
            app:percent="@{gameResult}"
            tools:text="@string/percentage_of_right_answers"/>

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_retry_label"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>